# mailing_service

./: .flake8  .gitignore  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  models.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_full_name.py
templates/: base.html
templates/mailing/: home.html
templates/users/: login.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
