[project]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Serzh Ivashchenko",email = "serzh466163@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"

