[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = "Сервис управления email рассылками"
authors = ["Sergey <your@email.com>"]
packages = [{include = "config"}, {include = "mailing"}, {include = "users"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.2.0"
psycopg2-binary = "^2.9.0"
Pillow = "^10.0.0"
redis = "^4.5.0"
django-redis = "^5.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
